[package]
name = "rclock"
version = "0.1.0"
authors = ["lytexdev <immanuel@lytex.dev>"]
edition = "2021"
description = "Command-line stopwatch, alarm clock, and Pomodoro timer."
license = "MIT"

[dependencies]
clap = "4.5.26"
ctrlc = "3.4.5"
crossterm = "0.28.1"
figlet-rs = "0.1.5"
chrono = "0.4.39"
